@@ -1829,3 +1829,5 @@ Version 15
 		have to do is change the constructor of your GUIState subclass so that it
 		creates the model with a fixed seed and the visualization will see it also.
 		For example, public FlockersWithUI() { super(new Flockers(15)); }
+	Modified the seed field in the Console to accept a long, but warn the user that
+		a long seed was provided.
